# recreational_cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
include/raylib_ext/: vector2.h
src/: CMakeLists.txt  boundary.h  main.cpp  ray.h
src/distribution/: CMakeLists.txt  constants.hpp  grid.hpp  main.cpp
src/noise/: CMakeLists.txt  main.cpp
src/ray_casting/: CMakeLists.txt  boundary.h  main.cpp  ray.h
src/space/: CMakeLists.txt  constants.h  main.cpp  spaceship.cpp  spaceship.h
